<resources>
    <string name="app_name">مـابـكـو</string>
    <string name="dir">	امكانية الحفر على كفر جهازك بأسم أو صورة حسب اختيارك

كما يتوفر لدينا ميداليات محفورة باسماء وصور مختلفة
</string>
    <string name="cover">	امكانية الطباعة على كفرات السليكون والبلاستيك خاصّتك بشكل كامل على الكفر صورة أو أسماء مزخرفة
 </string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_scroll_view">ScrollViewActivity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="mychar">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ دجحخهعغفقثصضشسيبلاتنمكطظزوةىلارؤءئذإأآ</string>
    <string name="num">1234567890٠١٢٣٤٥٦٧٨٩</string>
    <string name="ga_trackingId" translatable="false">UA-114686059-1</string>
    <string name="title_activity_map">Map</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="error_when_retrieving_data">Error in data</string>
    <string name="FACEBOOK_APP_ID">1589697944399953</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">3fab139a216acbe3f0087aaf3dd9e241</string>
    <string name="checkwifi">الرجاء التأكد من الاتصال بالانترنت</string>
    <string name="notsupport">يبدو أن جهازك لا يدعم هذه الميزة أو هناك مشكلة مؤقته في السيرفر المسؤول عن الخدمة</string>
    <string name="title_activity_products">المنتجات</string>
    <string name="title_home">الرئيسية</string>
    <string name="feed_back">ارسال شكوى</string>
    <string name="share">مشاركة التطبيق</string>
    <string name="services_title">الخدمات</string>
    <string name="verfy_warranty">تحـقّـق من كـفـالـة جـهازك </string>
    <string name="feedback_description">تفاصيل الشكوى</string>
    <string name="warranty">الكفالة</string>
    <string name="phone">الهاتف :</string>
    <string name="my_device_warranty">تحقق من كفالة جهازك لدى مابكو</string>
    <string name="barcode_warranty">تحقق عن طريق الباركود</string>
    <string name="imei">أدخل رمز الـ IMEI</string>
    <string name="submit">ارسال</string>
    <string name="offers_header">العروض</string>
    <string name="prompt_password">كلمة المرور</string>
    <string name="Login">تسجيل الدخول</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="signup">تسجيل</string>
    <string name="email">البريد الالكتروني</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
</resources>