<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/title_home"/>

        <item
            android:id="@+id/productsFragment"
            android:icon="@drawable/products"
            android:title="@string/title_activity_products"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/services"
            android:title="@string/services_title"/>

        <item
            android:id="@+id/offersFragment"
            android:icon="@drawable/baseline_local_offer_24"
            android:title="@string/offers_header"/>
    </group>
</menu>