<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Signin.LoginFragment">
    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/rafat"
        android:text="@string/Login"

        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/textedit_shape"
        android:drawableStart="@drawable/person_vector"
        android:fontFamily="@font/rafat"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="viewStart" />


    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_user_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/textedit_shape"
        android:drawableStart="@drawable/lock_vector"

        android:hint="@string/prompt_password"
        android:inputType="textPassword"

        android:padding="10dp"
        android:fontFamily="@font/rafat"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/txt_password"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rafat"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="13dp" />

</LinearLayout>